force-app/main/default/objects/Contact/fields/VPFN_Gender__c.field-meta.xml
<CustomField>
    <fullName>VPFN_Gender__c</fullName>
    <description>Person&apos;s gender. Can be determined, using the Vocative rules. Part of Vocative Polish First Name library.</description>
    <inlineHelpText>Person&apos;s gender.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Woman</fullName>
            </value>
            <value>
                <fullName>Man</fullName>
            </value>
            <value>
                <fullName>Undefinable</fullName>
            </value>
            <value>
                <fullName>Plural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>