force-app/main/default/objects/Contact/fields/VPFN_Polish_Vocative__c.field-meta.xml
<CustomField>
    <fullName>VPFN_Polish_Vocative__c</fullName>
    <description>Firstname in the Vocative form, using the polish Vocative rules. Part of Vocative Polish First Name library.</description>
    <inlineHelpText>Firstname in the Vocative form.</inlineHelpText>
    <label>Polish Vocative</label>
    <length>45</length>
    <type>Text</type>
</CustomField>