force-app/main/default/objects/Contact/fields/VPFN_Vocative_Salutation__c.field-meta.xml
<CustomField>
    <fullName>VPFN_Vocative_Salutation__c</fullName>
    <description>Salutation, dependent on gender, in the Vocative form. Part of Vocative Polish First Name library.</description>
    <inlineHelpText>Salutation in the Vocative form.</inlineHelpText>
    <label>Vocative Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pani</fullName>
            </value>
            <value>
                <fullName>Panie</fullName>
            </value>
            <value>
                <fullName>Pani / Pani</fullName>
            </value>
            <value>
                <fullName>Państwo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>